# alea

./: .gitignore  Cargo.toml  README.md  config.json  config.yaml  parameters.ron
src/: data.rs  engine.rs  main.rs  params.rs  utils.rs
