[package]
name = "alea"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
ndarray = { version = "0.16.1", features = ["serde"] }
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
